fix progress bar, language nav, footer align, submit cursor

--- a/theme/src/components/breadcrumb/_breadcrumb_standard.scss
+++ b/theme/src/components/breadcrumb/_breadcrumb_standard.scss
@@ -27,6 +27,8 @@
   .cmp-breadcrumb__item-link {
     color: $grey3;
     text-decoration: none;
+    border: 0.125rem solid $transparent;
+    border-radius: 0.25em;
     &:hover {
       color: $text;
     }
