--- a/theme/src/components/experiencefragment/_experiencefragment_footer.scss
+++ b/theme/src/components/experiencefragment/_experiencefragment_footer.scss
@@ -6,6 +6,10 @@
     padding: 1.5625em 0;
     border-top: 0.125em solid $grey1;
 
+    & div {
+        height: 100%;
+    }
+
     .separator {
         display: none;
     }
@@ -19,14 +23,14 @@
     }
 
     .cmp-image__image {
-        max-width: 9.2em;
+        width: 9.2em;
         margin: 0 auto;
         display: block;
     }
 
     .cmp-title {
         text-align: center;
-        margin: 0 1em;
+        margin: 0.5em 1em;
         @media only screen and (max-width: 768px) {
             margin: 1em 1em;
         }
