--- a/theme/src/site/_variables.scss
+++ b/theme/src/site/_variables.scss
@@ -26,6 +26,7 @@ $error:                 #D7373F;
 $error-hover:           #BE1E26;
 $success:               #268E6C;
 $success-hover:         #0D7553;
+$transparent:           rgba(0, 0, 0, 0);
 
 //== Grid
 
